src/test/examples/custom/valid/class/canAssignVariableToClassAttribute.wacc
# Public class attributes can be assigned to something

begin
  class H is 
    public int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
  end
  H p = new H(2);
  int x = p.v
end